# sspvo-2022

./: .gitignore  Cargo.toml  dump.sql
src/: cls.rs  main.rs  models.rs  token.rs
src/models/: token.rs
ss_derive/: Cargo.toml
ss_derive/src/: lib.rs
tests/: models.rs
tests/Epgu/EpguApplication/: EpguApplication.xsd
tests/Epgu/EpguApplicationAgree/: EpguApplicationAgree.xsd
tests/Epgu/EpguApplicationCancel/: EpguApplicationCancel.xsd
tests/Epgu/EpguApplicationRefuse/: EpguApplicationRefuse.xsd
tests/Epgu/EpguApplicationUidAppropriation/: EpguApplicationUidAppropriation.xsd
tests/Epgu/EpguEntrantPhotoFile/: EpguEntrantPhotoFile.xsd
tests/Epgu/EpguNoticeDone/: EpguNoticeDone.xsd
tests/Epgu/EpguPaidContract/: EpguPaidContract.xsd
tests/Epgu/EpguPersonProfileChange/: EpguPersonProfileChange.xsd
tests/Epgu/EpguTestAgreed/: EpguTestAgreed.xsd
tests/Payload/AdmissionVolume/: Add.xml  Add.xsd  Edit.xml  Get.Response.xsd  Remove.xml  Remove.xsd
tests/Payload/Campaign/: Add.xml  Add.xsd  Edit.xml  Get.Response.xsd  Get.xml  Get.xsd  GetByYear.Response.xsd  Remove.xml  Remove.xsd
tests/Payload/CampaignAchievement/: Add.xml  Edit.xml  Get.Response.xsd  Get.xsd  Remove.xml  Remove.xsd
tests/Payload/CompetitionListPackage/: Add.xml  Add.xsd  Base64File.field.xml  Base64File.field.xsd
tests/Payload/CompetitiveGroup/: Add.xml  Add.xsd  Edit.xml  Get.Response.xsd  Remove.xml  Remove.xsd
tests/Payload/DirectionParamsValue/: Add.xml  Edit.xml  Edit.xsd  Get.xml  Remove.xsd
tests/Payload/DistributedAdmissionVolume/: Add.xml  Add.xsd  Edit.xml  Get.xsd  (+1 more)
(+115 files in other folders)
