[package]
name = "sspvo-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5.1"
#serde_type_name = "0.2.0"
base64 = "0.13"

ss_derive = { path = "./ss_derive" }
